--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "serve": "vue-cli-service serve --watch",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "reset": "rm -rf node_modules && rm -rf package-lock.json && npm i"
   },
   "dependencies": {
-    "bootstrap-vue": "^2.21.2",
-    "core-js": "^3.20.3",
+    "bootstrap-vue": "^2.23.1",
+    "core-js": "^3.30.1",
     "firebase": "^9.19.1",
     "jquery": "^3.6.4",
     "lamejs": "^1.2.1",
@@ -34,11 +35,11 @@
     "@vue/cli-service": "~5.0.8",
     "eslint": "^8.38.0",
     "eslint-plugin-vue": "^9.10.0",
-    "node-sass": "^8.0.0",
+    "sass": "^1.62.0",
     "sass-loader": "^13.2.2",
-    "vue-cli-plugin-vuetify": "^2.4.5",
-    "vue-template-compiler": "^2.6.14",
-    "vuetify-loader": "^1.7.0"
+    "vue-cli-plugin-vuetify": "^2.5.8",
+    "vue-template-compiler": "^2.7.14",
+    "vuetify-loader": "^1.9.2"
   },
   "eslintConfig": {
     "root": true,
