--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,14 +14,14 @@
     "jquery": "^3.6.4",
     "lamejs": "^1.2.1",
     "storage": "^0.2.0",
-    "v-header": "^1.0.0",
     "vue": "^3.2.47",
     "vue-advanced-chat": "^2.0.7",
     "vue-google-charts": "^1.1.0",
     "vue-router": "^4.1.6",
     "vue-scroll-progress": "^1.1.5",
     "vuetify": "^3.1.15",
-    "vuex" : "^4.1.0"
+    "vuex" : "^4.1.0",
+    "p5" : "^1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
