--- a/.github/workflows/main_takocheung.yml
+++ b/.github/workflows/main_takocheung.yml
@@ -24,15 +24,19 @@ jobs:
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
-
-      - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
-
-      - name: Upload artifact for deployment job
+        
+      - name: Frontend build
+        working-directory: frontend
+        run: |
+          npm install
+          npm install @vue/cli-service
+          npx -p @vue/cli vue-cli-service build --mode development
+          
+      - name: Archive Production Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          name: dist
+          path: dist/
 
   deploy:
     runs-on: ubuntu-latest
@@ -45,10 +49,9 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
         with:
-          name: .net-app
+          name: fb
 
-      - name: Deploy to Azure Web App
-        id: deploy-to-webapp
+      - name: Deploy to Azure
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'takocheung'
