--- a/.github/workflows/main_takocheung.yml
+++ b/.github/workflows/main_takocheung.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Archive Production Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: dist
+          name: fb
           path: dist/
 
   deploy:
