--- a/.github/workflows/main_takocheung.yml
+++ b/.github/workflows/main_takocheung.yml
@@ -37,6 +37,7 @@ jobs:
         with:
           name: fb
           path: dist/
+          working-directory: frontend
 
   deploy:
     runs-on: ubuntu-latest
