--- a/.github/workflows/main_takocheung.yml
+++ b/.github/workflows/main_takocheung.yml
@@ -21,34 +21,10 @@ jobs:
         with:
           dotnet-version: '7.x'
           include-prerelease: true
-
-      - name: Build with dotnet
-        run: dotnet build --configuration Release
-        
-      #- name: Frontend build
-        #working-directory: frontend
-        #run: |
-          #npm install
-          #npm install @vue/cli-service
-          #npm run build
           
       - name: App Service Web App Build Action
         uses: Azure/appservice-build@v3
         with:
-          # 'Relative path (within the repository) to the source directory of the project you want to build; if no value is
-          # provided for this, the root of the repository ("GITHUB_WORKSPACE" environment variable) will be built.'
-
-          # source-directory: # optional
-          # 'Programming platform used to build the web app; if no value is provided, Oryx will determine the platform to
-          # build with. Supported values: dotnet, golang, java, nodejs, php, python, ruby'
-
-          # platform: # optional
-          # 'Version of the programming platform used to build the web app; if no value is provided, Oryx will determine the
-          # version needed to build the repository.'
-
-          # platform-version: # optional
-          # The directory where the build output will be copied to.
-          # output-directory: /# optional
           repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for Github integrations (i.e. PR comments)
           action: "upload"
           ###### Repository/Build Configurations - These values can be configured to match your app requirements. ######
@@ -56,6 +32,16 @@ jobs:
           app_location: "/frontend" # App source code path
           api_location: "" # Api source code path - optional
           output_location: "dist" # Built app content directory - optional
+
+      #- name: Build with dotnet
+        #run: dotnet build --configuration Release
+        
+      - name: Frontend build
+        working-directory: frontend
+        run: |
+          npm install
+          npm install @vue/cli-service
+          npm run build
           
       - name: Archive Production Artifact
         uses: actions/upload-artifact@v2
