--- a/.github/workflows/main_takocheung.yml
+++ b/.github/workflows/main_takocheung.yml
@@ -22,16 +22,16 @@ jobs:
           dotnet-version: '7.x'
           include-prerelease: true
           
-      - name: App Service Web App Build Action
-        uses: Azure/appservice-build@v3
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for Github integrations (i.e. PR comments)
-          action: "upload"
-          ###### Repository/Build Configurations - These values can be configured to match your app requirements. ######
-          # For more information regarding Static Web App workflow configurations, please visit: https://aka.ms/swaworkflowconfig
-          app_location: "/frontend" # App source code path
-          api_location: "" # Api source code path - optional
-          output_location: "dist" # Built app content directory - optional
+#       - name: App Service Web App Build Action
+#         uses: Azure/appservice-build@v3
+#         with:
+#           repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for Github integrations (i.e. PR comments)
+#           action: "upload"
+#           ###### Repository/Build Configurations - These values can be configured to match your app requirements. ######
+#           # For more information regarding Static Web App workflow configurations, please visit: https://aka.ms/swaworkflowconfig
+#           app_location: "/frontend" # App source code path
+#           api_location: "" # Api source code path - optional
+#           output_location: "dist" # Built app content directory - optional
 
       #- name: Build with dotnet
         #run: dotnet build --configuration Release
