--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,7 +2,6 @@ steps:
 - name: node
   entrypoint: npm
   args: ['install']
-# Necessary for vue.js projects
 - name: node
   entrypoint: npm
   args: ['install', '-g', '@vue/cli']
@@ -14,3 +13,4 @@ steps:
   args: ['run', 'build']
 - name: "gcr.io/cloud-builders/gcloud"
   args: ["app", "deploy"]
+logsBucket: 'gs://personalsite-389601_cloudbuild'
