--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,8 @@
     "reset": "rm -rf dist && rm -rf node_modules && rm -rf package-lock.json && npm i"
   },
   "dependencies": {
-    "core-js": "^3.30.2",
-    "firebase": "^9.22.1",
+    "core-js": "^3.31.0",
+    "firebase": "^9.22.2",
     "jquery": "^3.7.0",
     "lamejs": "^1.2.1",
     "storage": "^0.2.0",
@@ -21,18 +21,19 @@
     "vue-scroll-progress": "^1.1.5",
     "vuetify": "^3.3.3",
     "vuex" : "^4.1.0",
-    "p5" : "^1.6.0"
+    "p5" : "^1.6.0",
+    "vue3-beautiful-chat": "^3.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.1",
-    "@babel/eslint-parser": "^7.21.8",
+    "@babel/core": "^7.22.5",
+    "@babel/eslint-parser": "^7.22.5",
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-eslint": "~5.0.8",
     "@vue/cli-service": "~5.0.8",
     "eslint": "^8.42.0",
     "eslint-plugin-vue": "^9.14.1",
-    "sass": "^1.63.2",
-    "sass-loader": "^13.3.1",
+    "sass": "^1.63.3",
+    "sass-loader": "^13.3.2",
     "vue-cli-plugin-vuetify": "^2.5.8",
     "vue-template-compiler": "^2.7.14"
   },
