--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,8 @@
     "sass": "^1.63.3",
     "sass-loader": "^13.3.2",
     "vue-cli-plugin-vuetify": "^2.5.8",
-    "vue-template-compiler": "^2.7.14"
+    "vue-template-compiler": "^2.7.14",
+    "axios":"^1.4.0"
   },
   "eslintConfig": {
     "root": true,
