--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,16 +13,17 @@
     "firebase": "^10.12.5",
     "jquery": "^3.7.0",
     "lamejs": "^1.2.1",
+    "p5": "^1.6.0",
+    "pdf-vue3": "^1.0.12",
     "storage": "^0.2.0",
     "vue": "^3.3.4",
     "vue-advanced-chat": "^2.0.7",
     "vue-google-charts": "^1.1.0",
     "vue-router": "^4.2.2",
     "vue-scroll-progress": "^1.1.5",
+    "vue3-beautiful-chat": "^3.3.1",
     "vuetify": "^3.3.3",
-    "vuex" : "^4.1.0",
-    "p5" : "^1.6.0",
-    "vue3-beautiful-chat": "^3.3.1"
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
@@ -30,13 +31,13 @@
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-eslint": "~5.0.8",
     "@vue/cli-service": "~5.0.8",
+    "axios": "^1.7.4",
     "eslint": "^8.42.0",
     "eslint-plugin-vue": "^9.14.1",
     "sass": "^1.63.3",
     "sass-loader": "^13.3.2",
     "vue-cli-plugin-vuetify": "^2.5.8",
-    "vue-template-compiler": "^2.7.14",
-    "axios":"^1.7.4"
+    "vue-template-compiler": "^2.7.14"
   },
   "eslintConfig": {
     "root": true,
