--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "lamejs": "^1.2.1",
     "p5": "^1.6.0",
     "pdf-vue3": "^1.0.12",
+    "qrcode": "^1.5.4",
     "storage": "^0.2.0",
     "vue": "^3.3.4",
     "vue-advanced-chat": "^2.0.7",
