--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "reset": "rm -rf dist && rm -rf node_modules && rm -rf package-lock.json && npm i"
   },
   "dependencies": {
+    "@ffmpeg/core": "^0.12.10",
+    "@ffmpeg/ffmpeg": "^0.12.15",
     "core-js": "^3.31.0",
     "firebase": "^10.12.5",
     "jquery": "^3.7.0",
@@ -29,8 +31,8 @@
   "devDependencies": {
     "@babel/core": "^7.22.5",
     "@babel/eslint-parser": "^7.22.5",
-    "@vue/cli-plugin-babel": "~5.0.8",
-    "@vue/cli-plugin-eslint": "~5.0.8",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/cli-service": "~5.0.8",
     "axios": "^1.7.4",
     "eslint": "^8.42.0",
