--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "pdf-vue3": "^1.0.12",
     "qrcode": "^1.5.4",
     "storage": "^0.2.0",
+    "three": "^0.174.0",
     "vue": "^3.3.4",
     "vue-advanced-chat": "^2.0.7",
     "vue-google-charts": "^1.1.0",
